GL/Projet_GL/src/test/deca/context/invalid/methods/args_inc.deca
// Description:
//    Appel de methode
//
// Resultats:
//    Type d'argument incompatible.
//    Erreur affichée: Incompatible assignment: expected int, got boolean
//

class A {
   int f(int x) {
      return x;
   }
}
{
   A a;
   a.f(true);
}
